<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/custom_toolbar"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitleSmall"
                android:text="@string/brand"
                android:id="@+id/textView5"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/brandSpinner"
                android:entries="@array/car_brands"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:padding="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitleSmall"
                android:text="@string/production_year"
                android:id="@+id/textView"
                android:layout_marginTop="40dp"/>
            
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/yearSpinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:padding="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitleSmall"
                android:text="@string/type_of_fuel"
                android:id="@+id/textView3"
                android:layout_marginTop="40dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/petrolTypesSpinner"
                android:entries="@array/fuel_types"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:padding="0dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitleSmall"
                android:text="@string/model"
                android:id="@+id/textView6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/modelEditText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitleSmall"
                android:text="@string/avg_consumption"
                android:id="@+id/textView2"
                android:layout_marginTop="40dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/consumptionEditText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitleSmall"
                android:text="@string/insurance_date"
                android:id="@+id/textView4"/>

            <EditText
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/insuranceEditText"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textTitleSmall"
                android:text="@string/service_date"
                android:id="@+id/textView12"
                android:layout_marginTop="40dp" />

            <EditText
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serviceEditText"
                android:selectAllOnFocus="true"
                android:focusable="false"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>