<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/beyondarFragment"
        android:name="com.beyondar.android.fragment.BeyondarFragmentSupport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cv1"
        android:layout_above="@+id/relativeLayout" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv"
        android:background="?attr/selectableItemBackground"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/nowTextView"
                android:textColor="@color/textColorPrimary"
                android:textSize="16dp"
                android:layout_marginLeft="80dp"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="-.--km"
                android:id="@+id/nowDistanceTextView"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="0dp"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nowImageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv1"
        android:background="?attr/selectableItemBackground"
        app:cardCornerRadius="0dp"
        android:layout_below="@+id/cv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorPrimaryDark">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/next"
                android:id="@+id/textView26"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/textColorPrimary"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="80dp"
                android:textStyle="bold"
                android:textSize="8dp"
                android:layout_marginTop="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Medium Text"
                android:id="@+id/nextTextView"
                android:textColor="@color/textColorPrimary"
                android:layout_below="@+id/textView26"
                android:layout_alignLeft="@+id/textView26"
                android:layout_alignStart="@+id/textView26"
                android:singleLine="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextImageView"
                android:layout_alignTop="@+id/textView26"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="2dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/navigationBarColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="--.--"
            android:id="@+id/distanceTextView"
            android:textColor="@color/textColorPrimary"
            android:gravity="center"
            android:layout_below="@+id/textView25"
            android:layout_alignLeft="@+id/textView25"
            android:layout_alignStart="@+id/textView25"
            android:layout_alignRight="@+id/textView25"
            android:layout_alignEnd="@+id/textView25"
            android:layout_marginTop="0dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="--:--"
            android:id="@+id/timeTextView"
            android:textColor="@color/textColorPrimary"
            android:gravity="center"
            android:layout_below="@+id/textView27"
            android:layout_alignLeft="@+id/textView27"
            android:layout_alignStart="@+id/textView27"
            android:layout_alignRight="@+id/textView27"
            android:layout_alignEnd="@+id/textView27"
            android:layout_marginTop="0dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/distance_left"
            android:id="@+id/textView25"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/arrive_time"
            android:id="@+id/textView27"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="30dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="10dp" />
    </RelativeLayout>

</RelativeLayout>